@@ -54,6 +54,8 @@ Core and Builtins
 Library
 -------
 
+- Close file objects in modulefinder in a timely manner.
+
 - Close a io.TextIOWrapper object in email.parser in a timely manner.
 
 - Close a file object in distutils.sysconfig in a timely manner.
